test/bad/10_erased_in_spine.er
let 0 Nat : U = (0 A : U) -> A -> (A -> A) -> A;
let zero : Nat = \A z s. z;
let succ : Nat -> Nat = \n A z s. s (n A z s);

let f : (0 A : U) -> (x : A) -> A = \A x. x;
let bad : (0 n : Nat) -> Nat = \n. f Nat n;
bad
